Revision history for Perl module Alien::SDL

TBD
     - Searching for libs/headers in /usr/X11R6/lib+include [FROGGS]
     - Skipping build of zlib in case its already there (fixes OpenBSD unknown-reports) [FROGGS]

1.416  Tue Oct 07 2010
     - Added missing patch files [FROGGS]

1.415  Tue Oct 07 2010
     - Using newer config tools for Pango (config.guess, config.sub, install.sh) [FROGGS]

1.414  Tue Sep 28 2010
     - new Win64 binaries [kmx]
     - new repo URL http://github.com/PerlGameDev/Alien-SDL [kmx]
     - Output of header testing is a one-liner now #203 [FROGGS]
     - Removed SDL_net from build system as it isnt needed [FROGGS]

1.413  Fri Aug 06 2010
     - Searching for lib<xxx>.dll.a libs (cygwin needs this) [kmx]
     - New src build set: SDL-1.2.14 & co. (builds only SDL+SDL_*) [kmx]
     - Using File::Fetch 0.24 [FROGGS]
     - Fixed path of libpng-1.4.1 (has changed due to release of libpng-1.5) [FROGGS]
     - Added fixes for fink and get_path uses in Mac [kthakore]

1.412  Mon July 19 2010
     - Searching for dynamic and static libs [FROGGS]

1.411  Fri July 16 2010
     - Cygwin fix [kmx, FROGGS]

1.410  Mon July 12 2010
     - SDL_ttf 2.0.10 is released, changed url [FROGGS]

1.409  Fri July 09 2010
     - Fixed regex for mmx disable 

1.408  Thr July 01 2010 -Yay Canada Day!
     - Messed up release version
     - skip building libpng in case it is already installed [#129] [FROGGS]

1.407  Thu June 30 2010
     - Confirm archname as 64 before using /usr/lib64 as a ld path [kthakore]

1.406  Sun June 13 2010
     - Added conditional ld path check for 64 bit libraries

1.405  Wed June 2nd 2010 
     - searching more ld paths for libs [kthakore] {ticket #153}
     - removes old share dirs installs of Alien [kthakore]
     - searching for .dylib's, .so's and .bundle's on mac [FROGGS]

1.404  Thu May 13 2010
     - added new binaries for Win64 with fb/pango patch [kmx]

1.403  Sat May 01 2010